<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cartographer_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="masuda@todo.todo">masuda</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 依存パッケージ -->
  <depend>rclcpp</depend>
  <depend>cartographer_ros</depend>
  <depend>urg_node2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_tools</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
